Fixed a problem with not aligned password fields

--- a/Orderista/MainStyleSheet.css
+++ b/Orderista/MainStyleSheet.css
@@ -44,7 +44,6 @@ body {
     margin-bottom: 30px;
     font-size: 21px;
     font-weight: 200;
-    line-height: 2.1428571435;
     color: inherit;
     background-color: #eeeeee;
 }
